--- a/cm/res/res/values/symbols.xml
+++ b/cm/res/res/values/symbols.xml
@@ -124,4 +124,10 @@
 
     <!-- CM system server -->
     <java-symbol type="string" name="config_externalSystemServer" />
+
+    <!-- Settings -->
+    <java-symbol type="string" name="privacy_guard_manager_title" />
+    <java-symbol type="string" name="lights_label" />
+    <java-symbol type="string" name="battery_light_title" />
+    <java-symbol type="string" name="notification_light_title" />
 </resources>
