--- a/packages/CMSettingsProvider/res/values/defaults.xml
+++ b/packages/CMSettingsProvider/res/values/defaults.xml
@@ -86,9 +86,6 @@
          1==on -->
     <integer name="def_heads_up_enabled">1</integer>
 
-    <!-- Default for CMSettings.Global.CM_SETUP_WIZARD_COMPLETED -->
-    <bool name="def_user_cmsetup_complete">true</bool>
-
     <!-- Default for CMSettings.Global.POWER_NOTIFICATIONS_ENABLED -->
     <bool name="def_power_notifications_enabled">false</bool>
 
@@ -125,4 +122,7 @@
     -->
     <string name="def_enabled_event_lls_components"></string>
 
+    <!-- Default for CMSettings.Secure.CM_SETUP_WIZARD_COMPLETED -->
+    <bool name="def_user_cmsetup_complete">true</bool>
+  
 </resources>
