cmsdk - define CM_SETUP_WIZARD_COMPLETED true as default
Change-Id: I5fea61d186a79612660f0e01b5332a98f5050b54

--- a/packages/CMSettingsProvider/res/values/defaults.xml
+++ b/packages/CMSettingsProvider/res/values/defaults.xml
@@ -122,4 +122,7 @@
     -->
     <string name="def_enabled_event_lls_components"></string>
 
+    <!-- Default for CMSettings.Secure.CM_SETUP_WIZARD_COMPLETED -->
+    <integer name="def_user_cmsetup_complete">1</integer>
+
 </resources>
